fix: revised duplicate detection code